definido o script dev

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Clone do https://www.tabnews.com.br/",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev"
   },
   "author": "Márcio Bueno",
   "license": "MIT",
