--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Clone do https://www.tabnews.com.br/",
   "main": "index.js",
   "scripts": {
+    "database:up": "docker compose -f ./infra/compose.yaml up -d",
+    "database:down": "docker compose -f ./infra/compose.yaml down",
     "dev": "next dev",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
